# V2H-Rectify

./: .gitignore  HANDOVER.md  LLM.txt  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
backend/api/: app.py  deps.py  schemas.py  ws.py
backend/api/routes/: corner.py  health.py  ocr.py
backend/config/: settings.py
backend/core/: __init__.py  craft_detector.py  grid_extractor.py  image_utils.py  perspective.py  print_removal.py  rotation.py  text_reformat.py
backend/services/: __init__.py  craft_service.py  ocr_pipeline.py  vlm_service.py
backend/tests/: test_text_reformat.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CornerEditor.tsx  ExportMenu.tsx  ImageDropzone.tsx  Layout.tsx  ManuscriptView.tsx  ProgressBar.tsx  ZoomableImage.tsx
frontend/src/hooks/: useBatchProgress.ts  useOCRProgress.ts
frontend/src/lib/: api.ts  export.ts  types.ts
frontend/src/pages/: BatchResultPage.tsx  BatchUploadPage.tsx  ResultPage.tsx  UploadPage.tsx
