[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "craft-ocr-v3"
version = "3.0.0"
description = "CRAFT-enhanced handwritten Chinese OCR system with Web API"
requires-python = ">=3.10"
license = "MIT"

dependencies = [
    # Deep learning
    "torch>=2.0.0",
    "easyocr>=1.7.0",
    # Computer vision
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    # Scientific computing
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    # VLM API client
    "openai>=1.0.0",
    # Web framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    # Configuration
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Task queue
    "redis>=5.0.0",
    # Utilities
    "python-Levenshtein>=0.21.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools]
packages = ["api", "core", "config", "services"]